增加卸载反馈接口
